<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Funny Fractions</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtPassword">Password</string>
    <string name="txtNombre">Nombres</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtPassword2">Repetir Password</string>
    <string name="txtPregunta1">Animal favorito</string>
    <string name="txtPregunta2">Color favorito</string>
    <string name="txtPregunta3">Deporte favorito</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="txtRegistrarse">Registrarse</string>
    <string name="txtRegistrate">Registrate</string>
    <string name="txtRecuperar">Olvide mi contraseña</string>
    <string name="btnRecuperar">Recuperar contraseña</string>
    <string name="title_activity_registro">registro</string>
    <string name="btnTutoriales">Tutoriales</string>
    <string name="btnPracticas">Practicas</string>
    <string name="btnEvaluacion">Evaluacion</string>
    <string name="btnqueson">¿Que son?</string>
    <string name="btnsuma">Suma</string>
    <string name="btnresta">Resta</string>
    <string name="btnmultli">Multiplicacion</string>
    <string name="btndivi">Division</string>
    <string name="txtQueson">¿QUE SON LAS FRACCIONES?</string>
    <string name="txtdefinicion">Número que expresa una cantidad determinada de porciones que se toman de un todo dividido en partes iguales,
                                    se representa con una barra horizontal que separa la primera cantidad (el númerador) de la segunda
                                    (el denominador)</string>
    <string name="txtejemplo">Por ejemplo, dividimos una pizza en 8 partes iguales y cogemos tres.</string>
    <string name="txtsumhomo">SUMAR FRACCIONES CON IGUAL DENOMINADOR (HOMOGENEAS)</string>
    <string name="txtsumhete">SUMAR FRACCIONES CON DIFERENTE DENOMINADOR (HETEROGENEAS)</string>
    <string name="txteoriasumhomo">Debemos sumar sus numeradores y dejar su denominador igual</string>
    <string name="txteoriasumhete">Debemos aplicar la técnica de la carita feliz, multiplicar los numeradores por los denominadores
                                    inversos y sumar los resultados, ese resultado será el numerador de la fraccion resultado, el denominador
                                    resultado es igual al producto de los denominadores</string>
    <string name="txtreshomo">RESTAR FRACCIONES CON IGUAL DENOMINADOR (HOMOGENEAS)</string>
    <string name="txtreshete">RESTAR FRACCIONES CON DIFERENTE DENOMINADOR (HETEROGENEAS)</string>
    <string name="txteoriareshomo">Debemos restar sus numeradores y dejar su denominador igual</string>
    <string name="txteoriareshete">Debemos aplicar la técnica de la carita feliz, multiplicar los numeradores por los denominadores
                                    inversos y restar los resultados, ese resultado será el numerador de la fraccion resultado, el denominador
                                    resultado es igual al producto de los denominadores</string>
    <string name="txtmul">MULTIPLICACION DE FRACCIONES</string>
    <string name="txteoriamul">Debemos multiplicar los numeradores para optener el numerador resultado y multiplicar los
                                denominadores para optener el denominador resultado</string>
    <string name="txtdiv">DIVISION DE FRACCIONES</string>
    <string name="txteoriadiv">Debemos multiplicar los numeradores por denominadores inversos</string>
    <string name="txtr_ingresa_datos">Ingresa tus datos</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="idioma">Idioma</string>
    <string name="sobre">Acerca</string>
    <string name="español">Español</string>
    <string name="ingles">Ingles</string>
    <string name="txtjugar">Jugar</string>
    <string name="txtinstrucciones">Instrucciones</string>
    <string name="txtsonido">Sonido</string>
    <string name="question">¿Cual es la respuesta correcta?</string>
    <string name="txtnewquestion">Siguiente pregunta</string>
    <string name="txtretirarse">Retirarse</string>
    <string name="txtjugardenuevo">Jugar de nuevo</string>
    <string name="txtsalir">Salir</string>

    <!--google kye -->
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <!--pauseActivity-->
    <string name="pause">PAUSA</string>

</resources>
