<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_one"
            android:title="@string/sobre" />
        <group>
            <item android:id="@+id/idioma"
            android:title="@string/idioma" />

            <item android:id="@+id/spanish"
                android:title="@string/español"
                android:icon="@drawable/spanish"
                android:visible="false"/>

            <item android:id="@+id/english"
                android:title="@string/ingles"
                android:icon="@drawable/english"
                android:visible="false"/>

        </group>

        <item android:id="@+id/sign_out"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>