<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/menu_layout_multiplicacion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondoagua2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logonicolas" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btn_instrucciones_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/boton_login"
            android:text="@string/txtinstrucciones"/>

        <Button
            android:id="@+id/btn_jugar_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/boton_login"
            android:text="@string/txtjugar"/>

        <Button
            android:id="@+id/btn_settings_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_login"
            android:text="@string/txtsonido"/>
    </LinearLayout>

</LinearLayout>