<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp">

    <ImageButton
        android:id="@+id/btntuto_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparente"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_fracc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:src="@drawable/fracciones"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_fracc">

        <Button
            android:id="@+id/btntuto_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:text="@string/btnqueson"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="167dp" />

        <android.support.v4.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btntuto_suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:text="@string/btnsuma"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="167dp" />

        <android.support.v4.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btntuto_resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:text="@string/btnresta"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="297dp"
            tools:layout_editor_absoluteY="167dp" />

        <android.support.v4.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btntuto_multli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:text="@string/btnmultli"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="433dp"
            tools:layout_editor_absoluteY="167dp" />

        <android.support.v4.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btntuto_divi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:text="@string/btndivi"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="579dp"
            tools:layout_editor_absoluteY="167dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>