<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp">

    <ImageView
        android:id="@+id/retornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/devolver" />

    <TextView
        android:id="@+id/titulo_queson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtQueson"
        android:textSize="25dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtdefinicion"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/txtdefinicion"
        android:textSize="17dp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtejemplo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgejemplo"
        android:layout_width="185dp"
        android:layout_height="136dp"
        android:layout_marginBottom="63dp"
        android:layout_marginTop="62dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_queson"
        app:srcCompat="@drawable/fraccionejemplo" />

    <TextView
        android:id="@+id/txtejemplo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="31dp"
        android:text="@string/txtejemplo"
        android:textSize="17dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/retornar" />

    <ImageView
        android:id="@+id/imgpizzacom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="44dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgpizzadiv"
        app:layout_constraintEnd_toStartOf="@+id/imgpizzadiv"
        app:layout_constraintStart_toStartOf="@+id/txtdefinicion"
        app:layout_constraintTop_toBottomOf="@+id/txtdefinicion"
        app:srcCompat="@drawable/pizzacom" />

    <ImageView
        android:id="@+id/imgpizzadiv"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="103dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgejemplo"
        app:layout_constraintEnd_toEndOf="@+id/next"
        app:layout_constraintStart_toStartOf="@+id/imgejemplo"
        app:layout_constraintTop_toBottomOf="@+id/txtdefinicion"
        app:srcCompat="@drawable/pizzadiv" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="44dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/next" />


</android.support.constraint.ConstraintLayout>